# call-cleaner

./: .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  Makefile  README.md  RELEASE_RUNBOOK.md  install.sh  pyproject.toml
.github/workflows/: release.yml  test.yml
share/: wrapper-purge.sh  wrapper.sh
src/call_cleaner/: __init__.py  __main__.py  cli.py  config.py  doctor.py  first_run.py  install_schedule.py  log.py  notifier.py  paths.py  scanner.py  state.py  trash.py  tui.py
termux-packages-recipe/: build.sh
tests/: conftest.py  test_cli.py  test_cli_run_notifier.py  test_config.py  test_doctor.py  test_doctor_termux.py  test_e2e.py  test_first_run.py  test_install_schedule.py  test_install_schedule_termux.py  test_log.py  test_notifier.py  test_paths.py  test_scanner.py  test_state.py  test_trash.py  test_tui.py
